sass/base.scss
.list-style-none { list-style-type: none; }

.h1 { font-size: 6.0rem; }
.h2 { font-size: 3.0rem; }
.h3 { font-size: 1.5rem; }
.h4 { font-size: 1.0rem; }

.m0  { margin: 0; }
.mt0 { margin-top: 0; }
.mb0 { margin-bottom: 0; }
.ml0 { margin-left: 0; }
.mr-half { margin-right: 0.75rem; }
.mt1 { margin-top: $size-1; }
.mr1 { margin-right: $size-1; }
.mb1 { margin-bottom: $size-1; }
.ml1 { margin-left: $size-1; }
.mt2 { margin-top: $size-2; }
.mb2 { margin-bottom: $size-2; }
.ml2 { margin-left: $size-2; }
.mr2 { margin-right: $size-2; }
.mt3 { margin-top: $size-3; }

.pt0 { padding-top: 0; }
.pb0 { padding-bottom: 0; }
.pl0 { padding-left: 0; }
.pr0 { padding-right: 0; }
.pl-half { padding-left: 0.75rem; }
.pr-half { padding-right: 0.75rem; }
.pl1 { padding-left: $size-1; }
.pr1 { padding-right: $size-1; }
.pt1 { padding-top: $size-1; }
.pb1 { padding-bottom: $size-1; }
.pt2 { padding-top: $size-2; }

.relative { position: relative; }

.bt  { border-top: 1px solid $border-color; }
.bb  { border-bottom: 1px solid $border-color; }
.bl  { border-left: 1px solid $border-color; }
.br  { border-right: 1px solid $border-color; }

.bt-thick { border-top: 2px solid $border-color; }
.bb-thick { border-bottom: 2px solid $border-color; }

.center { text-align: center; }
.right  { float: right; }

.round { border-radius: 50%; }

.bold { font-weight: bold; }
.underline { text-decoration: underline; }

.flex { display: -webkit-flex; display: flex; }
.block { display: block; }
.inline-block { display: inline-block; }
.display-none { display: none; }

.flex-uniform-size { -webkit-flex: 1; flex: 1; }
.flex-column { -webkit-flex-direction: column; flex-direction: column; }
.flex-align-center { -webkit-align-items: center; align-items: center; }
.flex-justify-center { -webkit-justify-content: center; justify-content: center; }

.overflow-auto     { overflow: auto; }
.overflow-hidden-x { overflow-x: hidden; }
.overflow-scroll-x { overflow-x: scroll; }

.border-box { box-sizing: border-box; }

.no-whitespace-wrap { white-space: nowrap; }

.pointer { cursor: pointer; }

.full-height { height: 100%; }

.red { color: $red; }
.bg-red { background: $red; }
.white { color: $white; }

